# VocalWeb

./: CONTRIBUTING.md  LICENSE  README.md  VocalWeb.ipynb  pyproject.toml  requirements.txt  setup.py
Src/: app.py  main.py
Src/config/: __init__.py  constants.py  settings.py
Src/services/: summarization.py  text_cleaning.py  text_extraction.py  tts_generation.py  wordcloud_generation.py
src/: __init__.py  app.py  main.py
src/config/: __init__.py  models.py  nltk_setup.py
src/services/: __init__.py  language_detection.py  ner_extraction.py  summarization.py  text_cleaning.py  text_extraction.py  tts_generation.py  utils.py  wordcloud_generation.py
