[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "VocalWeb"
version = "1.0.0"
description = "A Web-to-Audio converter that extracts, summarizes, and narrates web articles."
authors = [
    {name = "Yasir Altaf", email = ""}
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
dependencies = [
    "gradio",
    "transformers",
    "kokoro==0.7.11",
	"torch",
	"langdetect",
	"numpy",
	"spacy",
    "nltk",
	"pillow",
	"stanza",
    "trafilatura",
    "markitdown",
    "soundfile",
    "matplotlib",
    "wordcloud",
    "pytest",  # For testing
    "gliner",
]

[project.urls]
Homepage = "https://github.com/yasiral/VocalWeb"
Documentation = "https://github.com/yasiral/VocalWeb/wiki"
Source = "https://github.com/yasiral/VocalWeb"
BugTracker = "https://github.com/yasiral/VocalWeb/issues"

[project.scripts]
vocalweb = "main:main"  # CLI command for VocalWeb

[tool.setuptools]
packages = ["services", "config"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
